--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar sticky-top navbar-dark bg-dark">
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1 text-uppercase" [appPopover]="'EMOJI COPY'" popoverTitle="Title">emoji <span class="label">copy</span></span>
+    <span class="navbar-brand mb-0 h1 text-uppercase">emoji <span class="label">copy</span></span>
     <div class="input-group input-group-lg mb-3 mt-3">
       <input type="text" class="form-control" placeholder="search" aria-label="search" aria-describedby="button-addon2">
       <div class="input-group-append mr-3">
@@ -23,21 +23,7 @@
       <!--<app-popover-content #popoverTrigger>-->
       <!--#HTML TEMPLATE-->
       <!--</app-popover-content>-->
-      <div class="emoji-item" *ngFor="let emoji of category.emojis">
-        <div [class]="'img-' + emoji.unified.toLowerCase() + ' sm-emoji'" (click)="selectEmoji(emoji)"></div>
-        <!--<tg-skin-variations [emoji]="emoji" (select)="selectEmoji($event)"></tg-skin-variations>-->
-        <div class="tg-skin-variations" *ngIf="emoji.skin_variations && emoji.skin_variations.length">
-          <div class="card">
-            <div class="card-body d-flex">
-              <span class="emoji-item" *ngFor="let emoji_skin of emoji.skin_variations" (click)="selectEmoji(emoji_skin)">
-                <div [class]="'img-' + emoji_skin.unified.toLowerCase() + ' sm-emoji'"></div>
-              </span>
-            </div>
-          </div>
-          <!--<mat-card style="padding: 2px; display: flex; flex: 1; justify-content: space-around; flex-direction: row; z-index: 1; transition: all 1s ease .3s">-->
-          <!--</mat-card>-->
-        </div>
-      </div>
+      <app-emoji-item *ngFor="let emoji of category.emojis" [emoji]="emoji"></app-emoji-item>
     </ng-container>
   </div>
 
